# arcade-magique

./: CMakeLists.txt  README.md
Chess/: CMakeLists.txt  Chess.cpp  README.md  chess.cpp
Common/: CMakeLists.txt  Common.h  Solitaire.h  common.h
Gomoku/: CMakeLists.txt  Gomoku.cpp  README.md  gomoku.cpp
Klondike/: CMakeLists.txt  Game.cpp  Game.hpp  Klondike.cpp  README.md  klondike.cpp
Klondike/Classes/: Game.cpp  Game.hpp
Minesweeper/: CMakeLists.txt  Minesweeper.cpp  Minesweeper.h  README.md  logiciel.c  logiciel.h  minesweeper.cpp  minesweeper.h
Nonogram/: CMakeLists.txt  Nonogram.cpp  README.md  nonogram.cpp
Snake/: CMakeLists.txt  README.md  Snake.cpp  snake.cpp
Spider/: CMakeLists.txt  README.md  Spider.cpp  spider.cpp
Sudoku/: CMakeLists.txt  README.md  Sudoku.cpp  sudoku.cpp
